Add configuration cache JPMS workaround in tests